[package]
name = "shalloville_v1"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
opt-level = "z"

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_asset",
    "png",
    "bevy_sprite",
    "bevy_state",
    "multi_threaded",
    "bevy_ui",
    "default_font"
] }

bevy_egui = "0.28.0"
bevy-inspector-egui = "0.25.1"
bevy_entitiles = "0.10.0"
chrono = "0.4.38"
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

aws-sdk-s3 = "1.42.0"
aws-config = { version = "1.5.4", features = [ "behavior-version-latest"] }
tokio = { version = "1", features = ["full"]}

dotenvy_macro = "0.15.7"
embed_plist = "1.2.2"
flume = "0.11.0"
num_enum = "0.7.3"

image = "0.25.2"
nokhwa = { git = "https://github.com/Thintin914/nokhwa-temp-fix.git", branch = "0.10", features = ["input-native", "output-threaded"] }

async-std = "1"
livekit = { version = "0.5.1", features = ["native-tls"]}
livekit-api = "0.4.0"

parking_lot = "0.12.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tinyfiledialogs = "3.9.1"

[dependencies.uuid]
version = "1.10.0"
features = ["v4"]

[package.metadata.bundle.macos]
info_plist = "Info.plist"
